The tab order in the smart card views (OpenPGP, PIV, maybe others) is broken. The focus jumps around erratically instead of going to the next UI element when pressing Tab.
Description
Description
Revisions and Commits
Revisions and Commits
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA744c6bec241f a11y: Fix tab order in PIV card view | |||
| rKLEOPATRA6f3802cab246 a11y: Fix tab order in PIV card view | |||
| rKLEOPATRAaffee6c317fa a11y: Fix tab order in PKCS#15 card view | |||
| rKLEOPATRAabc2db859c3f a11y: Fix tab order in OpenPGP card view | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Open | None | T5824 Kleopatra: Full accessibility support | ||
| Resolved | • ikloecker | T7172 Kleopatra: Fix tab order in smart card views |
Event Timeline
Comment Actions
Fixed.
@werner Shall this be backported to VSD 3.3? The changes look more dramatic than they are. I mostly reordered existing code.