a11y: Fix tab order in OpenPGP card view

Create all widgets in the desired tab order with the main widget as
parent. Disable keyboard focus for the scroll area.

GnuPG-bug-id: 7172