src/view/pgpcardwidget.cpp
@@ -140,18 +140,13 @@ private:
 
 PGPCardWidget::PGPCardWidget(QWidget *parent)
     : QWidget(parent)
-    , mSerialNumber(new QLabel(this))
-    , mCardHolderLabel(new QLabel(this))
-    , mVersionLabel(new QLabel(this))
-    , mUrlLabel(new QLabel(this))
-    , mPinCounterLabel(new QLabel(this))
-    , mCardIsEmpty(false)
 {
     // Set up the scroll area
     auto myLayout = new QVBoxLayout(this);
     myLayout->setContentsMargins(0, 0, 0, 0);
 
     auto area = new QScrollArea;
+    area->setFocusPolicy(Qt::NoFocus);
     area->setFrameShape(QFrame::NoFrame);
     area->setWidgetResizable(true);
     myLayout->addWidget(area);
@@ -166,21 +161,24 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
         int row = 0;
 
         // Version and Serialnumber
-        cardInfoGrid->addWidget(mVersionLabel, row, 0, 1, 2);
+        mVersionLabel = new QLabel{this};
         mVersionLabel->setTextInteractionFlags(Qt::TextBrowserInteraction);
+        cardInfoGrid->addWidget(mVersionLabel, row, 0, 1, 2);
         row++;
 
         cardInfoGrid->addWidget(new QLabel(i18nc("@label:textbox", "Serial number:")), row, 0);
-        cardInfoGrid->addWidget(mSerialNumber, row, 1);
+        mSerialNumber = new QLabel{this};
         mSerialNumber->setTextInteractionFlags(Qt::TextBrowserInteraction);
+        cardInfoGrid->addWidget(mSerialNumber, row, 1);
         row++;
 
         // Cardholder Row
         cardInfoGrid->addWidget(new QLabel(i18nc("The owner of a smartcard. GnuPG refers to this as cardholder.", "Cardholder:")), row, 0);
-        cardInfoGrid->addWidget(mCardHolderLabel, row, 1);
+        mCardHolderLabel = new QLabel{this};
         mCardHolderLabel->setTextInteractionFlags(Qt::TextBrowserInteraction);
+        cardInfoGrid->addWidget(mCardHolderLabel, row, 1);
         {
-            auto button = new QPushButton;
+            auto button = new QPushButton{this};
             button->setIcon(QIcon::fromTheme(QStringLiteral("cell_edit")));
             button->setAccessibleName(i18nc("@action:button", "Edit"));
             button->setToolTip(i18nc("@info:tooltip", "Change"));
@@ -195,10 +193,11 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
                                                  "Pubkey URL:")),
                                 row,
                                 0);
-        cardInfoGrid->addWidget(mUrlLabel, row, 1);
+        mUrlLabel = new QLabel{this};
         mUrlLabel->setTextInteractionFlags(Qt::TextBrowserInteraction);
+        cardInfoGrid->addWidget(mUrlLabel, row, 1);
         {
-            auto button = new QPushButton;
+            auto button = new QPushButton{this};
             button->setIcon(QIcon::fromTheme(QStringLiteral("cell_edit")));
             button->setAccessibleName(i18nc("@action:button", "Edit"));
             button->setToolTip(i18nc("@info:tooltip", "Change"));
@@ -214,9 +213,10 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
                                                      "Remaining attempts:")),
                                     row,
                                     0);
-            cardInfoGrid->addWidget(mPinCounterLabel, row, 1);
-            mPinCounterLabel->setTextInteractionFlags(Qt::TextBrowserInteraction);
+            mPinCounterLabel = new QLabel{this};
             mPinCounterLabel->setToolTip(xi18nc("@info:tooltip", "Shows the number of remaining attempts for entering the correct PIN or PUK."));
+            mPinCounterLabel->setTextInteractionFlags(Qt::TextBrowserInteraction);
+            cardInfoGrid->addWidget(mPinCounterLabel, row, 1);
         }
 
         cardInfoGrid->setColumnStretch(cardInfoGrid->columnCount(), 1);
@@ -240,7 +240,7 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
     auto actionLayout = new QHBoxLayout;
 
     {
-        auto generateButton = new QPushButton(i18nc("@action:button", "Generate New Keys"));
+        auto generateButton = new QPushButton(i18nc("@action:button", "Generate New Keys"), this);
         generateButton->setToolTip(xi18nc("@info:tooltip",
                                           "<para>Generate three new keys on the smart card and create a new OpenPGP "
                                           "certificate with those keys. Optionally, the encryption key is generated "
@@ -253,7 +253,7 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
         connect(generateButton, &QPushButton::clicked, this, &PGPCardWidget::genkeyRequested);
     }
     {
-        auto pinButton = new QPushButton(i18nc("@action:button", "Change PIN"));
+        auto pinButton = new QPushButton(i18nc("@action:button", "Change PIN"), this);
         pinButton->setToolTip(i18nc("@info:tooltip",
                                     "Change the PIN required for using the keys on the smart card. "
                                     "The PIN must contain at least six characters."));
@@ -263,7 +263,7 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
         });
     }
     {
-        auto unblockButton = new QPushButton(i18nc("@action:button", "Unblock Card"));
+        auto unblockButton = new QPushButton(i18nc("@action:button", "Unblock Card"), this);
         unblockButton->setToolTip(i18nc("@info:tooltip", "Unblock the smart card with the PUK (if available) or the Admin PIN."));
         actionLayout->addWidget(unblockButton);
         connect(unblockButton, &QPushButton::clicked, this, [this]() {
@@ -277,7 +277,7 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
         });
     }
     {
-        auto pukButton = new QPushButton(i18nc("@action:button", "Change Admin PIN"));
+        auto pukButton = new QPushButton(i18nc("@action:button", "Change Admin PIN"), this);
         pukButton->setToolTip(i18nc("@info:tooltip", "Change the PIN required for administrative operations."));
         actionLayout->addWidget(pukButton);
         connect(pukButton, &QPushButton::clicked, this, [this]() {
@@ -285,7 +285,7 @@ PGPCardWidget::PGPCardWidget(QWidget *parent)
         });
     }
     {
-        mSetOrChangePUKButton = new QPushButton(i18nc("@action:button", "Set PUK"));
+        mSetOrChangePUKButton = new QPushButton(i18nc("@action:button", "Set PUK"), this);
         mSetOrChangePUKButton->setToolTip(i18nc("@info:tooltip",
                                                 "Set or change the PUK that can be used to unblock the smart card. "
                                                 "The PUK must contain at least eight characters."));
